# github_data

./: .gitignore  ENV_EXAMPLE  README.md  app.py  main.py  pyproject.toml
docker/: Dockerfile  entry.sh
src/: analyze_data.py  db.py  gh_fetcher.py  picture_generator.py  save_data.py  settings.py  token_provider.py
src/github_data/: analyze_data.py  app.py  db.py  gh_fetcher.py  picture_generator.py  save_data.py  token_provider.py
